[package]
name = "salvo_macros"
version = "0.19.0"
authors = ["Chrislearn Young <chrislearn@hotmail.com>", "driftluo <driftluo@foxmail.com>"]
edition = "2021"
description = "salvo proc macros"
homepage = "https://salvo.rs"
repository = "https://github.com/salvo-rs/salvo/macros"
readme = "../README.md"
keywords = ["salvo", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["network-programming", "asynchronous", "web-programming::http-server", "web-programming::websocket"]

[lib]
name = "salvo_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro-crate = "1"
proc-macro2 = "1"
proc-quote = "0.4"
syn = { version = "1", features = ["full", "parsing"] }
