[package]
name = "salvo_macros"
version = "0.35.0"
authors = ["Chrislearn Young <chrislearn@hotmail.com>", "driftluo <driftluo@foxmail.com>"]
edition = "2021"
description = "salvo proc macros"
homepage = "https://salvo.rs"
repository = "https://github.com/salvo-rs/salvo/macros"
readme = "../README.md"
keywords = ["http", "async", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-server", "web-programming::websocket", "network-programming", "asynchronous"]

[lib]
name = "salvo_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
Inflector = "0.11"
darling = "0.14"
proc-macro-crate = "1"
proc-macro2 = "1"
quote = "1"
regex = "1"
syn = { version = "1", features = ["full", "parsing"] }
