[package]
name = "salvo"
version = "0.26.1"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2021"
description = """
Salvo is a powerful and simplest web server framework in Rust world.
"""
homepage = "https://salvo.rs"
repository = "https://github.com/salvo-rs/salvo"
documentation = "https://docs.rs/salvo/"
readme = "../README.md"
keywords = ["salvo", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["network-programming", "asynchronous", "web-programming::http-server", "web-programming::websocket"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
codecov = { repository = "salvo-rs/salvo", branch = "main", service = "github" }

[lib]
name = "salvo"
path = "src/lib.rs"

[features]
default = []
full = ["test", "rustls", "native-tls", "unix", "acme", "anyhow", "extra"]
rustls = ["salvo_core/rustls"]
unix = ["salvo_core/unix"]
acme = ["salvo_core/acme"]
anyhow = ["salvo_core/anyhow"]
test = ["salvo_core/test"]
native-tls = ["salvo_core/native-tls"]
affix = ["salvo_extra/affix"]
extra = ["salvo_extra/full"]
basic_auth = ["salvo_extra/basic_auth"]
jwt-auth = ["salvo_extra/jwt-auth"]
compression = ["salvo_extra/compression"]
cors = ["salvo_extra/cors"]
csrf = ["salvo_extra/csrf"]
logging = ["salvo_extra/logging"]
proxy = ["salvo_extra/proxy"]
serve-static = ["salvo_extra/serve-static"]
size-limiter = ["salvo_extra/size-limiter"]
sse = ["salvo_extra/sse"]
timeout = ["salvo_extra/timeout"]
ws = ["salvo_extra/ws"]

[dependencies]
salvo_core = { version = "0.26.1", default-features = false, path = "../core" }
salvo_extra = { version = "0.26.1", default-features = false, optional = true, path = "../extra" }
