[package]
name = "salvo-acme"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Acme for Salvo web server framework. Powered by certon.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = ["quinn"]
quinn = ["salvo_core/quinn", "dep:futures-util", "dep:quinn"]

[dependencies]
certon = { workspace = true }
futures-util = { workspace = true, features = ["io"], optional = true }
quinn = { workspace = true, optional = true, default-features = false, features = [
    "runtime-tokio",
] }
salvo_core = { workspace = true, features = ["http1", "http2"] }
tokio = { workspace = true }
tokio-rustls = { workspace = true, features = ["logging", "ring"] }
tracing = { workspace = true }

[dev-dependencies]
salvo_core = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }

[lints]
workspace = true
