[package]
name = "salvo-cache"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = """
Cache middleware for Salvo web server framework.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["moka-store"]
full = ["moka-store", "lru-store"]
lru-store = ["dep:lru"]
moka-store = ["dep:moka"]

[dependencies]
bytes = { workspace = true }
lru = { workspace = true, optional = true }
moka = { workspace = true, optional = true, features = ["future"] }
salvo_core = { workspace = true, features = ["http1"]}
tracing = { workspace = true }

[dev-dependencies]
salvo_core = {  workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
time = { workspace = true }