[package]
name = "salvo-compression"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["all"]
all = ["brotli", "gzip", "deflate", "zstd"]
brotli = ["dep:brotli"]
gzip = ["dep:zstd"]
deflate = ["dep:flate2"]
zstd = ["dep:zstd"]

[dependencies]
brotli = { workspace = true, optional = true, features = ["default"] }
bytes = { workspace = true }
flate2 = { workspace = true, optional = true, features = ["default"] }
futures-util = { workspace = true }
indexmap = { workspace = true }
salvo_core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
zstd = { workspace = true, optional = true, features = ["default"] }

[dev-dependencies]
salvo_core = { workspace = true, features = ["http1", "test"] }
