[package]
name = "salvo_core"
version = { workspace = true }
authors = ["Chrislearn Young <chrislearn@hotmail.com>", "driftluo <driftluo@foxmail.com>"]
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["cookie", "http1", "fix-http1-request-uri", "http2", "test"]
full = ["cookie", "http1", "fix-http1-request-uri", "http2", "quinn", "rustls", "native-tls", "openssl", "unix", "test", "anyhow", "eyre"]
cookie = ["dep:cookie"]
http1 = []
fix-http1-request-uri = ["http1"]
http2 = ["hyper/http2"]
quinn = ["dep:salvo-http3", "dep:quinn", "rustls"]
rustls = ["http1", "http2", "dep:tokio-rustls", "dep:rustls-pemfile"]
native-tls = ["http1", "http2", "dep:tokio-native-tls", "dep:native-tls"]
openssl = ["http2", "dep:openssl", "dep:tokio-openssl"]
unix = ["http1"]
test = ["dep:brotli", "dep:flate2", "dep:zstd", "dep:base64", "dep:encoding_rs", "dep:serde_urlencoded", "dep:url", "tokio/macros"]
acme = ["http1", "http2", "dep:base64", "hyper/client", "dep:reqwest", "dep:rcgen", "dep:ring", "dep:x509-parser", "dep:tokio-rustls", "dep:rustls-pemfile"]

[dependencies]
cruet = { workspace = true }
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true }
base64 = { workspace = true, optional = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
cookie = { workspace = true, features = ["percent-encode", "private", "signed"], optional = true }
encoding_rs = { workspace = true, optional = true }
enumflags2 = { workspace = true }
eyre = { workspace = true, optional = true }
form_urlencoded = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
headers = { workspace = true }
http = { workspace = true }
hyper = { workspace = true, features = ["http1", "client", "server"] }
indexmap = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
multer = { workspace = true }
multimap = { workspace = true, features = ["serde"] }
native-tls = { workspace = true, optional = true, features = ["alpn"] }
once_cell = { workspace = true }
openssl = { workspace = true, optional = true }
percent-encoding = { workspace = true }
pin-project = { workspace = true }
parking_lot = { workspace = true }
quinn = { workspace = true, optional = true, features = ["runtime-tokio", "ring", "tls-rustls"] }
rcgen = { workspace = true, optional = true }
regex = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
ring = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
salvo-http3 = { workspace = true, optional = true, features = ["quinn"] }
salvo_macros = { workspace = true }
salvo-utils = { workspace = true, features = ["runtime"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
serde-xml-rs = { workspace = true }
serde_urlencoded = { workspace = true, optional = true }
tempfile = { workspace = true }
textnonce = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
tokio-native-tls = { workspace = true, optional = true }
tokio-openssl = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
url = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }

brotli = { workspace = true, optional = true, features = ["default"] }
flate2 = { workspace = true, optional = true, features = ["default"] }
zstd = { workspace = true, optional = true, features = ["default"] }

[dev-dependencies]
fastrand = { workspace = true }
