[package]
name = "salvo-csrf"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = """
CSRF support for salvo web server framework.
"""
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords.workspace = true
license.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [features]
# default = ["cookie-store"]
# cookie-store = ["salvo_core/cookie", "dep:cookie"]
# session-store = ["dep:salvo-session"]

[dependencies]
aead = { workspace = true, features = ["alloc"], optional = true }
cookie = { workspace = true, features = ["percent-encode", "signed"], optional = true }
hkdf.workspace = true
rand.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
byteorder.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
data-encoding.workspace = true
hmac.workspace = true
tracing.workspace = true
salvo-session = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
salvo_core = { features = ["test"], path = "../core" }
