[package]
name = "salvo-csrf"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = """
CSRF support for salvo web server framework.
"""
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords.workspace = true
license.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["cookie-store", "bcrypt-cipher"]
cookie-store = ["salvo_core/cookie", "dep:cookie"]
session-store = ["dep:salvo-session"]
hmac-cipher = ["dep:hmac", "dep:sha2"]
bcrypt-cipher = ["dep:bcrypt"]

[dependencies]
base64.workspace = true
cookie = { workspace = true, features = ["percent-encode", "signed"], optional = true }
rand.workspace = true
sha2 = { workspace = true, optional = true }
bcrypt = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
tracing.workspace = true
salvo_core = { workspace = true, default-features = false }
salvo-session = { workspace = true, default-features = false, optional = true }
serde_json.workspace = true

[dev-dependencies]
salvo_core = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
