[package]
name = "salvo_extra"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["full"]
full = ["affix", "basic-auth", "caching-headers", "catch-panic", "force-https", "jwt-auth", "compression", "logging", "sse", "size-limiter", "trailing-slash", "timeout", "websocket"]
affix = []
basic-auth = ["dep:base64"]
caching-headers = ["dep:etag", "dep:tracing"]
catch-panic = ["dep:futures-util", "dep:tracing"]
compression = ["dep:brotli", "dep:flate2", "dep:zstd", "dep:indexmap", "dep:futures-util", "dep:bytes", "tokio", "dep:tokio-stream", "dep:tokio-util", "dep:tracing"]
force-https = ["dep:tracing"]
jwt-auth = ["dep:jsonwebtoken", "dep:once_cell", "dep:serde", "salvo_core/cookie", "dep:tracing"]
logging = ["dep:tracing"]
size-limiter = []
sse = ["dep:futures-util", "dep:pin-project", "tokio", "dep:serde", "dep:serde_json", "dep:tracing"]
trailing-slash = ["dep:tracing"]
timeout = ["tokio/macros"]
websocket = ["dep:futures-util", "dep:hyper", "tokio", "tokio-tungstenite", "dep:tracing"]

[dependencies]
async-session = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
etag = { workspace = true, features = ["std"], optional = true }
futures-util = { workspace = true, optional = true }
hyper = { workspace = true, features = ["server", "http1", "http2", "client"], optional = true }
jsonwebtoken = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
salvo_core = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["io"], optional = true }
tracing = { workspace = true, optional = true }
brotli = { workspace = true, optional = true, features = ["default"] }
flate2 = { workspace = true, optional = true, features = ["default"] }
zstd = { workspace = true, optional = true, features = ["default"] }

[dev-dependencies]
salvo_core = { workspace = true, features = ["http1", "test"] }
time.workspace = true
tracing-test.workspace = true
http-body-util.workspace = true
