[package]
name = "salvo_extra"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["full"]
full = ["affix-state", "basic-auth", "caching-headers", "catch-panic", "force-https", "logging", "sse", "concurrency-limiter", "size-limiter", "trailing-slash", "timeout", "websocket", "request-id", "tower-compat"]
affix-state = []
basic-auth = ["dep:base64"]
caching-headers = ["dep:etag", "dep:tracing"]
catch-panic = ["dep:futures-util", "dep:tracing"]
force-https = ["dep:tracing", "salvo_core/rustls"]
logging = ["dep:tracing"]
concurrency-limiter = ["dep:tracing", "tokio"]
size-limiter = []
sse = ["dep:futures-util", "dep:pin-project", "tokio", "dep:serde", "dep:serde_json", "dep:tracing"]
trailing-slash = ["dep:tracing"]
timeout = ["tokio/macros"]
websocket = ["dep:futures-util", "dep:hyper", "tokio", "tokio-tungstenite", "dep:tracing"]
request-id = ["dep:ulid"]
tower-compat = ["dep:futures-util", "dep:http-body-util", "dep:tower", "dep:tracing"]

[dependencies]
base64 = { workspace = true, optional = true }
etag = { workspace = true, features = ["std"], optional = true }
futures-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, features = ["server", "http1", "http2", "client"], optional = true }
pin-project = { workspace = true, optional = true }
salvo_core = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["io"], optional = true }
tower = { workspace = true, optional = true, default-features = false, features = ["buffer", "util"] }
tracing = { workspace = true, optional = true }
ulid = { workspace = true, optional = true, features = ["std"] }

[dev-dependencies]
salvo_core = { workspace = true, features = ["http1", "server", "test"] }
time = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true, features = ["limit"]}
tracing-test = { workspace = true }
http-body-util = { workspace = true }

[lints]
workspace = true