[package]
name = "salvo-flash"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = """
Flash message support for salvo web server framework.
"""
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords = ["http", "session", "web", "framework", "server"]
license.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["cookie_store"]
cookie_store = ["salvo_core/cookie"]
session_store = ["dep:salvo-session"]

[dependencies]
async-session = { workspace = true, optional = true }
salvo_core = { workspace = true, default-features = false }
salvo_extra = { workspace = true, default-features = false }
salvo-session = { workspace = true, default-features = false, optional = true }
tracing = "0.1"
serde = "1"
serde_json = "1"

[dev-dependencies]
salvo_core = {workspace = true, features = ["test"] }
tracing-test.workspace = true
reqwest.workspace = true
tokio.workspace = true
